Header, footer and other changes

--- a/sections/footer-utilities.liquid
+++ b/sections/footer-utilities.liquid
@@ -32,11 +32,7 @@
           </div>
         {%- endfor -%}
       {%- else -%}
-        {% comment %} Fallback/Placeholder if no menu selected {% endcomment %}
-        <div class="footer-col"><a href="#">Menu Item 1</a></div>
-        <div class="footer-col"><a href="#">Menu Item 2</a></div>
-        <div class="footer-col"><a href="#">Menu Item 3</a></div>
-        <div class="footer-col"><a href="#">Menu Item 4</a></div>
+        {% comment %} No menu selected {% endcomment %}
       {%- endif -%}
     </div>
 
