--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -222,7 +222,7 @@
             "newsletter-heading": {
               "type": "text",
               "settings": {
-                "text": "t:html_defaults.join_our_email_list",
+                "text": "Iscriviti alla nostra newsletter",
                 "width": "100%",
                 "alignment": "left",
                 "type_preset": "h3"
@@ -231,7 +231,7 @@
             "newsletter-text": {
               "type": "text",
               "settings": {
-                "text": "t:html_defaults.get_exclusive_deals_and_early_access_to_new_products",
+                "text": "Ricevi offerte esclusive e accesso anticipato ai nuovi prodotti.",
                 "width": "100%",
                 "alignment": "left",
                 "type_preset": "rte"
