--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1403,8 +1403,8 @@
   "settings": [
     { "type": "header", "content": "Custom Header" },
     { "type": "checkbox", "id": "use_custom_header", "label": "Use Custom Header Layout", "default": true },
-    { "type": "text", "id": "videofaq_link", "label": "Videofaq Link", "default": "#" },
-    { "type": "text", "id": "infoblog_link", "label": "Infoblog Link", "default": "#" },
+    { "type": "text", "id": "videofaq_link", "label": "Link Videofaq" },
+    { "type": "text", "id": "infoblog_link", "label": "Link Infoblog" },
     { "type": "color", "id": "button_green_color", "label": "Button Green Color", "default": "#00aa00" },
     { "type": "header", "content": "Menu Icons" },
     { "type": "select", "id": "videofaq_icon", "label": "Videofaq Icon", "options": [
@@ -1430,7 +1430,7 @@
       { "value": "folder", "label": "Folder" },
       { "value": "shopping-cart", "label": "Shopping Cart" }
     ], "default": "auto" },
-    { "type": "text", "id": "social_twitter", "label": "X (Twitter) Link", "default": "#" },
+    { "type": "text", "id": "social_twitter", "label": "Link X (Twitter)" },
     { "type": "text", "id": "social_whatsapp", "label": "WhatsApp Link" },
     { "type": "checkbox", "id": "show_notifications", "label": "Show Notification Bell", "default": true },
     { "type": "checkbox", "id": "show_flag", "label": "Show Italian Flag", "default": true },
