--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -3,7 +3,7 @@
   {% if request.design_mode %}
     class="shopify-design-mode"
   {% endif %}
-  lang="{{ request.locale.iso_code }}"
+  lang="it"
 >
   <head>
     {%- if settings.favicon != blank -%}
