--- a/sections/sidebar-navigation.liquid
+++ b/sections/sidebar-navigation.liquid
@@ -27,7 +27,7 @@
           <a href="{{ routes.search_url }}" class="iobio-menu-link" data-iobio-link>
             <span style="display:flex; align-items:center; gap:12px;">
               <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-search" viewBox="0 0 20 20" style="width:1.2rem; height:1.2rem; fill:currentColor;"><path d="M8 3c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0-2c3.9 0 7 3.1 7 7 0 1.6-.5 3-1.4 4.2l5.1 5.1c.4.4.4 1 0 1.4-.4.4-1 .4-1.4 0l-5.1-5.1C11 15.5 9.6 16 8 16c-3.9 0-7-3.1-7-7s3.1-7 7-7z" fill="currentColor"/></svg>
-              {{ link.title }}
+              {{ 'general.search.search' | t }}
             </span>
           </a>
         </li>
@@ -146,7 +146,7 @@
             <a href="{{ routes.account_logout_url }}" class="iobio-menu-link" data-iobio-link>
               <span style="display:flex; align-items:center; gap:12px; opacity:0.7;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" style="visibility:hidden"><path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/></svg>
-                Esci
+                {{ 'customer.log_out' | t | default: 'Esci' }}
               </span>
             </a>
           </li>
@@ -155,7 +155,7 @@
             <a href="{{ routes.account_login_url }}" class="iobio-menu-link" data-iobio-link>
               <span style="display:flex; align-items:center; gap:12px;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/><path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/></svg>
-                Accedi / Registrati
+                {{ 'customer.log_in' | t | default: 'Accedi' }} / {{ 'customer.register.submit' | t | default: 'Registrati' }}
               </span>
             </a>
           </li>
