Partners and fiscal data

--- a/blocks/footer-copyright.liquid
+++ b/blocks/footer-copyright.liquid
@@ -16,6 +16,8 @@
     {%- if block_settings.show_powered_by -%}
       , {{ powered_by_link }}
     {%- endif -%}
+    <br>
+    P.IVA: IT12345678901 | Sede Legale: Via Italia, Bari
   </span>
 </div>
 
