Navbar link fix 2

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1403,8 +1403,8 @@
   "settings": [
     { "type": "header", "content": "Custom Header" },
     { "type": "checkbox", "id": "use_custom_header", "label": "Use Custom Header Layout", "default": true },
-    { "type": "url", "id": "videofaq_link", "label": "Link Videofaq" },
-    { "type": "url", "id": "infoblog_link", "label": "Link Infoblog" },
+    { "type": "url", "id": "videofaq_url", "label": "Link Videofaq" },
+    { "type": "url", "id": "infoblog_url", "label": "Link Infoblog" },
     { "type": "color", "id": "button_green_color", "label": "Button Green Color", "default": "#00aa00" },
     { "type": "header", "content": "Menu Icons" },
     { "type": "select", "id": "videofaq_icon", "label": "Videofaq Icon", "options": [
